<resources>
    <string name="app_name">婚姻建議程式</string>
    <string name="hello_world">你好,這個程式的主要類別名稱叫做MainActivity</string>
    <string name="sex">性別：</string>
    <string name="age">年齡：</string>
    <string name="edt_sex_hint">(請輸入性別)</string>
    <string name="edt_age_hint">(請輸入年齡)</string>
    <string name="btn_ok">確定</string>
    <string name="result">建議：</string>
    <string name="sug_not_hurry">還不急~</string>
    <string name="sug_get_married">趕快結婚!!</string>
    <string name="sug_find_couple">開始找對象...</string>
    <string name="sex_male">1</string>
</resources>
